<resources>
    <string name="app_name">Contacts App</string>
    <string name="contact_phone">Contact Phone</string>
    <string name="contact_name">Contact Name</string>
    <string name="contact_email">Contact E-mail</string>
    <string name="delete_button_text">Delete Contact</string>
    <string name="save_button_text">Save Contact</string>
    <string name="create_button_text">Create Contact</string>
</resources>