<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/inputName"
        android:layout_width="390dp"
        android:layout_height="70dp"
        android:inputType="textPersonName"
        android:autofillHints="name"
        android:hint="@string/contact_name" />

    <EditText
        android:id="@+id/inputPhone"
        android:layout_width="390dp"
        android:layout_height="70dp"
        android:inputType="phone"
        android:autofillHints="phone"
        android:hint="@string/contact_phone" />

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="390dp"
        android:layout_height="70dp"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:hint="@string/contact_email" />

    <Button
        android:id="@+id/btnSaveContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#37A63B"
        android:text="@string/save_button_text" />
</LinearLayout>
